# iris-ugrid

./: .cirrus.yml  .flake8  .pre-commit-config.yaml  .travis.yml  README.md  cirrus.yml  conda_requirements.txt  noxfile.py  setup.cfg  setup.py
iris-ugrid/: regrid.py  ugrid_cf_reader.py
iris_ugrid/: __init__.py  regrid.py  ucube.py  ugrid_cf_reader.py
iris_ugrid/tests/: __init__.py  synthetic_data_generator.py  synthetic_data_generator_old.py  test_install.py  test_regrid.py
iris_ugrid/tests/integration/: __init__.py  test_synthetic_data.py  test_ugrid_load.py
iris_ugrid/tests/results/test_regrid/: small_mesh.txt
iris_ugrid/tests/synthetic_data_generator/: __init__.py
iris_ugrid/tests/synthetic_data_generator/mesh_headers/: README.md
iris_ugrid/tests/unit/: __init__.py
iris_ugrid/tests/unit/tests/: __init__.py
iris_ugrid/tests/unit/tests/synthetic_data_generator/: __init__.py  test_synthetic_data.py
iris_ugrid/tests/unit/ucube/: test_UCube.py
requirements/: conda_requirements.txt  core.txt  test.txt
requirements/ci/: iris-ugrid.yml  py36.yml  py37.yml
requirements/manual/: README.md  iris_branch.txt  iris_commit.txt  iris_test_data_ref.txt
